@@ -1,5 +1,9 @@
 2004-09-05  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/lookup.cc (triangle): translate by interval.
+
+	* VERSION (PACKAGE_NAME): release 2.3.14
+
 	* Documentation/user/changing-defaults.itely (Page layout): add
 	betweensystempadding
 
